众筹商品详情页

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -288,6 +288,35 @@ body {
             padding: 20px;
         }
     }
+
+    .crowdfunding-info {
+        margin-bottom: 20px;
+        font-size: 14px;
+        .have-text {
+            font-size: 16px;
+        }
+        .total-amount {
+            .symbol {
+                font-size: 20px;
+            }
+            font-size: 32px;
+        }
+        .progress {
+            height: 10px;
+            margin-bottom: 5px;
+        }
+        .progress-info {
+            font-weight: 600;
+            margin: 10px 0;
+        }
+        .current-progress {
+            color: rgb(161, 6, 224);
+        }
+        .text-red {
+            color: red;
+        }
+    }
+
 }
 
 .cart-index-page {
